<resources>
    <string name="app_name">My Modules</string>
    <string name="c346_android_programming">C346 Android Programming</string>
    <string name="c206_software_development_process">C206 Software Development Process</string>
    <string name="c218_ui_ux_design">C218 UI/UX Design</string>
    <string name="c235_it_security_and_management">C235 IT Security and Management</string>
    <string name="c203_web_app_in_development_in_php">C203 Web App In Development In PHP</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="go_back">Go back</string>
</resources>